tests/functional2/lang/string-coerce-integers/eval-fail-accidental-coerce.err.exp
error:
       … while evaluating x
         at /pwd/in.nix:1:21:
            1| let x = "" + 42; in x == "42"
             |                     ^
            2|

       … while evaluating a path segment
         at /pwd/in.nix:1:14:
            1| let x = "" + 42; in x == "42"
             |              ^
            2|

       error: cannot coerce an integer to a string: 42
